# target-agent

./: .gitignore  README.md  pyproject.toml  whitelist.txt
agent/: mutablesecurity
agent/agent/: agent.py
agent/config/: __init__.py  config.py
agent/helpers/: environment.py  exceptions.py  ticker.py
agent/mutablesecurity_headless/: __init__.py  local_system.py  solution_state.py
agent/reporter/: __init__.py  reporter.py
service/: target-agent.service
